# ChangeLog for media-plugins/swh-plugins
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/swh-plugins/ChangeLog,v 1.40 2010/01/10 18:26:00 fauli Exp $

  10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  swh-plugins-0.4.15-r1.ebuild:
  Transfer Prefix keywords

*swh-plugins-0.4.15-r1 (13 Jan 2009)

  13 Jan 2009; Alexis Ballier <aballier@gentoo.org>
  +files/swh-plugins-0.4.15-system_gsm.patch, +swh-plugins-0.4.15-r1.ebuild:
  Use system libgsm, bug #252890

  05 Oct 2008; Alexis Ballier <aballier@gentoo.org>
  swh-plugins-0.4.15.ebuild:
  Add cvs to DEPEND because of stupid autopoint needing it. Bug #233422. If
  anyone has a better solution, please shout.

  22 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  +files/swh-plugins-0.4.15-gettext.patch, swh-plugins-0.4.15.ebuild:
  Run autopoint to that gettext macros get updated and it doesn't fail
  anymore with libtool 2.2, bug #231767

  18 Apr 2008; Markus Meier <maekke@gentoo.org> -swh-plugins-0.4.14.ebuild,
  swh-plugins-0.4.15.ebuild:
  amd64/x86 stable and remove old, bug #217520

  31 Jan 2008; Fabian Groffen <grobian@gentoo.org>
  swh-plugins-0.4.14.ebuild, swh-plugins-0.4.15.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  02 Jul 2007; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Hand to newly-born proaudio herd.

  29 Jun 2007; Diego Pettenò <flameeyes@gentoo.org>
  +files/swh-plugins-0.4.15-pic.patch,
  +files/swh-plugins-0.4.15-plugindir.patch,
  +files/swh-plugins-0.4.15-riceitdown.patch, swh-plugins-0.4.15.ebuild:
  Replace append of -fPIC with a proper patch for PIC support, remove bad
  -lintl linking, add another patch to fix plugins directory choice and one to
  fix the extra CFLAGS; replace ppc-macos checks with userland_Darwin and add
  it to IUSE; make pkgconfig a buildtime-only dependency, remove sed
  dependency.

*swh-plugins-0.4.15 (16 Jun 2007)

  16 Jun 2007; Samuli Suominen <drac@gentoo.org>