@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX swh-plugins-0.4.15-gettext.patch 346 RMD160 e000a1d116835db12be70d2218f8de017eac9a82 SHA1 5b735d07bd1490cdd0e7646da136de25eab0a899 SHA256 dd90abf14c3dcfba1742f102f1e567cbe950b512682aa6ee2d15cbc8b7c9a8c1
 AUX swh-plugins-0.4.15-pic.patch 5377 RMD160 c742de5874450c12560d8f2975754ca139dab453 SHA1 1230c4dd8125e587eb8717bd9dedf7bf93ebc5de SHA256 502e82c78e4011df78321106a26b925ef3c4fd11361a9beaf4ae8c828450c4f9
@@ -7,14 +7,24 @@ AUX swh-plugins-0.4.15-plugindir.patch 647 RMD160 753cd8d9b825f52ab94ae819f45302
 AUX swh-plugins-0.4.15-riceitdown.patch 1157 RMD160 f47b061d4baffc72197a76ae50dd5f451ae35d03 SHA1 af2bf463803dd087dcb4df6aa4662b701b965f9b SHA256 9bab8b8e2ea112bb5b021f5b98bb9c6ebc36774cd037f29280c4cf9b9ec1b8e3
 AUX swh-plugins-0.4.15-system_gsm.patch 1526 RMD160 725e960cda508a40c184480f99d1c7ab9846c8d3 SHA1 181724305c3a385ccb1d97f948591f37789985b3 SHA256 cf5648266134182d286d475347825617e0154465440969c26a75f7903d27a72e
 DIST swh-plugins-0.4.15.tar.gz 1051623 RMD160 7b84a6b6269227a8c9b7091b3f3f08b5df3cb60d SHA1 a9aa0b1b71a95fe91ffcda60146559b3ad40ae90 SHA256 d05ee8a4f4d92e828412bce3449a034f6ef16bb630eaf60f8fe4e15a89168640
-EBUILD swh-plugins-0.4.15-r1.ebuild 1810 RMD160 f954c8049dcb0d6d62dc703951f59cab935083c6 SHA1 0cb9dd006369fd171ed8fc78863490064ea5dce7 SHA256 4618f6a5a5521f9a3080172c301f9406fa91fc7dd9c27ea9ef8e04a0a09c84de
-EBUILD swh-plugins-0.4.15.ebuild 1676 RMD160 62b24eeb5ac94e97c88eae40da6d780b86a19e7b SHA1 56b880cd40debed783b65967be70a4557bb89b45 SHA256 455b8cb2c6d8bff9f200becd27409380ec2599737a74cd6178c65d2d60671d6e
-MISC ChangeLog 7162 RMD160 b4b4cdaf8d46dea325cea5795b72e7f9a95ef59c SHA1 c2b010451e3cf968ecb57299c300a4117a8e35b4 SHA256 7d3ab732e876f3e3d8f6a894bb34dc569db11694fbd88d6f088706e044ba3f6d
+EBUILD swh-plugins-0.4.15-r1.ebuild 1808 RMD160 e20e2466912b58a89d43cb5cd213e3b514d1af26 SHA1 4a28009ba0bbdd92ef422ac69d3190315d3b572b SHA256 9a54c60effaf57f46a22b9217f7c75501ccebb8f2c782584ac6c51e9036d8ab9
+EBUILD swh-plugins-0.4.15.ebuild 1671 RMD160 e71457bea20d51ed330c2d6a67609e7c956957b0 SHA1 b535f67659374066217f220805d21560caca64f4 SHA256 e7c0413611fb35b778b05d79b9ff995b4cda97b17084a9300a11c344c669d083
+MISC ChangeLog 7309 RMD160 75e877590dc5dae340d0cfc8c0c31acac2b836d4 SHA1 4bf611366d0822415a29c79f4781d9a8b08453c1 SHA256 e99bee584ce073950a71069f6f479b5dd363f526aed5ed2da321e81177c25a28
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAktKG8IACgkQNQqtfCuFneOAUwCfX3fKGcKggxOVIsom0UX1+YsG
-zZQAn369U0afcW6BVZ+iaxL5QgcvDfyb
-=JWLt
+iQIcBAEBCAAGBQJMHBXqAAoJELHSF2kinlg4NwEP/Atv/jogWqhbV/LdFTNbhwIL
++F9eUj8tvwF4xqD3NsshiHwYSmQY9GvSWc2pfLzBXmmVVxEQbsmrws3SP+sBa5PP
+9eoQur22Oq2SHGpJKhuvVYOVGRLkc/FKjstMlOI0PvDWmC70TpdR1oduAYD6dqyN
+oPofriE5JrfzrZh2oZSMkjEljFyAEHtsZvj7ssL+JShB1mBZPiLKq0yrTc3zxXMe
+8DYrgXsrubZQe99cHYohLbXoFXxrqA3NTUIVAP9ECjittVZ27Toh87q/mFw8AeHO
+XuOAuto0aZf0dHnh6P3Xsjhh0mONfoINbSefUsxZZDbUQDfem0nOy5uXj59fb4wA
+2TEnsbA4v2m8S6pyOKrp7CnAxaDCw1hPmegVuH2POb5q5ncqo90ZeprP6f7lwUcy
+nEpsT2V16y9beFxyaKXAGGKlEbpaO7VdQlLVAdCsZf5O8cNhHhPzZ6OOwtU45+um
+86dh6/7Z5rG0vtNkQ0QWwegMyoekuo5qv/OrXrlxUdkmMtIMpLRORdmETFJLXfxa
+VXq+xmo3SZ9SUjpwDmdJF/tFd/CtcYK2DQluS0l8A3IkumAvcsX/PT2MpH1Ie6yb
+hxV/zopriRV1TZmBP9BksU2H5szcOomprQ5Js822o9ELhHtOVJ8KjF9YIoQyI3Av
+rW6XQ8eCXzT9wsZo46OU
+=T27M
 -----END PGP SIGNATURE-----
