@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/swh-plugins/swh-plugins-0.4.15.ebuild,v 1.6 2008/10/05 11:31:01 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/swh-plugins/swh-plugins-0.4.15.ebuild,v 1.7 2010/06/19 00:57:08 abcd Exp $
 
 inherit eutils autotools
 
@@ -17,7 +17,7 @@ RDEPEND="media-libs/ladspa-sdk
 	>=sci-libs/fftw-3"
 DEPEND="${RDEPEND}
 	sys-devel/gettext
-	dev-util/cvs
+	dev-vcs/cvs
 	dev-util/pkgconfig"
 
 src_unpack() {
