@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/swh-plugins
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/swh-plugins/ChangeLog,v 1.40 2010/01/10 18:26:00 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/swh-plugins/ChangeLog,v 1.41 2010/06/19 00:57:08 abcd Exp $
+
+  19 Jun 2010; Jonathan Callen <abcd@gentoo.org> swh-plugins-0.4.15.ebuild,
+  swh-plugins-0.4.15-r1.ebuild:
+  Moving dev-util/cvs* to dev-vcs/cvs*
 
   10 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
   swh-plugins-0.4.15-r1.ebuild:
